website/i18n/zh-hant/docusaurus-plugin-content-docs/version-2.x/api/plugin-methods/lifecycle-apis.mdx
---
sidebar_position: 1
toc_max_heading_level: 4
---

# 生命週期 API

在建置過程中，插件會並行載入以獲取自身內容並渲染至路由。插件亦可配置 webpack 或對生成文件進行後處理。

## `async loadContent()` {#loadContent}

插件應使用此生命週期從資料來源（檔案系統、遠端 API、無頭 CMS 等）獲取資料或進行伺服器端處理。返回值即為其所需內容。

例如，下方插件會回傳 1 到 10 之間的隨機整數作為內容。

```js title="docusaurus-plugin/src/index.js"
module.exports = function (context, options) {
  return {
    name: 'docusaurus-plugin',
    // highlight-start
    async loadContent() {
      return 1 + Math.floor(Math.random() * 10);
    },
    // highlight-end
  };
};
```

## `async contentLoaded({content, actions})` {#contentLoaded}

`loadContent` 載入的資料將在 `contentLoaded` 中被消耗。可將其渲染為路由、註冊為全域資料等。

### `content` {#content}

`contentLoaded` 會在 `loadContent` 完成後呼叫。`loadContent()` 的返回值將作為 `content` 傳遞給 `contentLoaded`。

### `actions` {#actions}

`actions` 包含三個函式：

#### `addRoute(config: RouteConfig): void` {#addRoute}

建立要新增至網站的路由。

```ts
type RouteConfig = {
  path: string;
  component: string;
  modules?: RouteModules;
  routes?: RouteConfig[];
  exact?: boolean;
  priority?: number;
};
type RouteModules = {
  [module: string]: Module | RouteModules | RouteModules[];
};
type Module =
  | {
      path: string;
      __import?: boolean;
      query?: ParsedUrlQueryInput;
    }
  | string;
```

#### `createData(name: string, data: any): Promise<string>` {#createData}

宣告式回呼函式，用於建立靜態資料（通常為 JSON 或字串），後續可作為 props 提供給您的路由。接收檔案名稱及要儲存的資料，並回傳實際資料檔案的路徑。

例如，下方插件會建立一個顯示「您的朋友是：Yangshun、Sebastien」的 `/friends` 頁面：

```jsx title="website/src/components/Friends.js"
import React from 'react';

export default function FriendsComponent({friends}) {
  return <div>Your friends are {friends.join(',')}</div>;
}
```

```js title="docusaurus-friends-plugin/src/index.js"
export default function friendsPlugin(context, options) {
  return {
    name: 'docusaurus-friends-plugin',
    // highlight-start
    async contentLoaded({content, actions}) {
      const {createData, addRoute} = actions;
      // Create friends.json
      const friends = ['Yangshun', 'Sebastien'];
      const friendsJsonPath = await createData(
        'friends.json',
        JSON.stringify(friends),
      );

      // Add the '/friends' routes, and ensure it receives the friends props
      addRoute({
        path: '/friends',
        component: '@site/src/components/Friends.js',
        modules: {
          // propName -> JSON file path
          friends: friendsJsonPath,
        },
        exact: true,
      });
    },
    // highlight-end
  };
}
```

#### `setGlobalData(data: any): void` {#setGlobalData}

此函式允許建立一些全域插件資料，這些資料可從任何頁面讀取，包括其他插件建立的頁面及您的主題佈局。

這些資料可透過 [`useGlobalData`](../../docusaurus-core.mdx#useGlobalData) 和 [`usePluginData`](../../docusaurus-core.mdx#usePluginData) 鉤子在客戶端/主題程式碼中存取。

:::warning

全域資料是...全域性的：其大小會影響網站所有頁面的載入時間，因此請盡量保持精簡。在可能的情況下，優先使用 `createData` 和頁面特定資料。

:::

例如，下方插件會建立一個顯示「您的朋友是：Yangshun、Sebastien」的 `/friends` 頁面：

```jsx title="website/src/components/Friends.js"
import React from 'react';
import {usePluginData} from '@docusaurus/useGlobalData';

export default function FriendsComponent() {
  const {friends} = usePluginData('docusaurus-friends-plugin');
  return <div>Your friends are {friends.join(',')}</div>;
}
```

```js title="docusaurus-friends-plugin/src/index.js"
export default function friendsPlugin(context, options) {
  return {
    name: 'docusaurus-friends-plugin',
    // highlight-start
    async contentLoaded({content, actions}) {
      const {setGlobalData, addRoute} = actions;
      // Create friends global data
      setGlobalData({friends: ['Yangshun', 'Sebastien']});

      // Add the '/friends' routes
      addRoute({
        path: '/friends',
        component: '@site/src/components/Friends.js',
        exact: true,
      });
    },
    // highlight-end
  };
}
```

## `configureWebpack(config, isServer, utils, content)` {#configureWebpack}

修改內部 webpack 配置。若返回值為 JavaScript 物件，將使用 [`webpack-merge`](https://github.com/survivejs/webpack-merge) 合併至最終配置中。若為函式，則會呼叫該函式並接收 `config` 作為第一個參數，`isServer` 標誌作為第二個參數。

:::warning

`configureWebpack` 的 API 未來將修改為接收物件形式 (`configureWebpack({config, isServer, utils, content})`)

:::

### `config` {#config}

`configureWebpack` 呼叫時會傳入根據客戶端/伺服器建置生成的 `config`。您可將其視為待合併的基礎配置。

### `isServer` {#isServer}

`configureWebpack` 會在伺服器建置和客戶端建置時被呼叫。伺服器建置會收到 `true` 作為 `isServer` 參數，而客戶端建置會收到 `false`。

### `utils` {#utils}

`configureWebpack` 還會收到一個工具物件：

- `getStyleLoaders(isServer: boolean, cssOptions: {[key: string]: any}): Loader[]`
- `getJSLoader(isServer: boolean, cacheOptions?: {}): Loader | null`

你可以使用它們來有條件地回傳你的 webpack 配置。

例如，以下插件會修改 webpack 配置以轉譯 `.foo` 檔案。

```js title="docusaurus-plugin/src/index.js"
module.exports = function (context, options) {
  return {
    name: 'custom-docusaurus-plugin',
    // highlight-start
    configureWebpack(config, isServer, utils) {
      const {getJSLoader} = utils;
      return {
        module: {
          rules: [
            {
              test: /\.foo$/,
              use: [getJSLoader(isServer), 'my-custom-webpack-loader'],
            },
          ],
        },
      };
    },
    // highlight-end
  };
};
```

### `content` {#content-1}

`configureWebpack` 會同時被呼叫並傳入插件載入的內容。

### 合併策略 {#merge-strategy}

我們使用 [webpack-merge](https://github.com/survivejs/webpack-merge) 將插件的 Webpack 配置部分合併到全域 Webpack 配置中。

可以指定合併策略。例如，如果你希望某個 webpack 規則被前置而非後置：

```js title="docusaurus-plugin/src/index.js"
module.exports = function (context, options) {
  return {
    name: 'custom-docusaurus-plugin',
    configureWebpack(config, isServer, utils) {
      return {
        // highlight-start
        mergeStrategy: {'module.rules': 'prepend'},
        module: {rules: [myRuleToPrepend]},
        // highlight-end
      };
    },
  };
};
```

詳情請閱讀 [webpack-merge 策略文件](https://github.com/survivejs/webpack-merge#merging-with-strategies)。

### 配置開發伺服器 {#configuring-dev-server}

可以透過回傳 `devServer` 欄位來配置開發伺服器。

```js title="docusaurus-plugin/src/index.js"
module.exports = function (context, options) {
  return {
    name: 'custom-docusaurus-plugin',
    configureWebpack(config, isServer, utils) {
      return {
        // highlight-start
        devServer: {
          open: '/docs', // Opens localhost:3000/docs instead of localhost:3000/
        },
        // highlight-end
      };
    },
  };
};
```

## `configurePostCss(options)` {#configurePostCss}

在生成客戶端套件時修改 [`postcss-loader` 的 `postcssOptions`](https://webpack.js.org/loaders/postcss-loader/#postcssoptions)。

應回傳修改後的 `postcssOptions`。

預設情況下，`postcssOptions` 如下所示：

```js
const postcssOptions = {
  ident: 'postcss',
  plugins: [require('autoprefixer')],
};
```

範例：

```js title="docusaurus-plugin/src/index.js"
module.exports = function (context, options) {
  return {
    name: 'docusaurus-plugin',
    // highlight-start
    configurePostCss(postcssOptions) {
      // Appends new PostCSS plugin.
      postcssOptions.plugins.push(require('postcss-import'));
      return postcssOptions;
    },
    // highlight-end
  };
};
```

## `postBuild(props)` {#postBuild}

在 (生產環境) 建置完成時呼叫。

```ts
interface Props {
  siteDir: string;
  generatedFilesDir: string;
  siteConfig: DocusaurusConfig;
  outDir: string;
  baseUrl: string;
  headTags: string;
  preBodyTags: string;
  postBodyTags: string;
  routesPaths: string[];
  plugins: Plugin<any>[];
  content: Content;
}
```

範例：

```js title="docusaurus-plugin/src/index.js"
module.exports = function (context, options) {
  return {
    name: 'docusaurus-plugin',
    // highlight-start
    async postBuild({siteConfig = {}, routesPaths = [], outDir}) {
      // Print out to console all the rendered routes.
      routesPaths.map((route) => {
        console.log(route);
      });
    },
    // highlight-end
  };
};
```

## `injectHtmlTags({content})` {#injectHtmlTags}

向 Docusaurus 生成的 HTML 注入 head 和/或 body HTML 標籤。

`injectHtmlTags` 會同時被呼叫並傳入插件載入的內容。

```ts
function injectHtmlTags(): {
  headTags?: HtmlTags;
  preBodyTags?: HtmlTags;
  postBodyTags?: HtmlTags;
};

type HtmlTags = string | HtmlTagObject | (string | HtmlTagObject)[];

type HtmlTagObject = {
  /**
   * Attributes of the HTML tag
   * E.g. `{'disabled': true, 'value': 'demo', 'rel': 'preconnect'}`
   */
  attributes?: {
    [attributeName: string]: string | boolean;
  };
  /**
   * The tag name e.g. `div`, `script`, `link`, `meta`
   */
  tagName: string;
  /**
   * The inner HTML
   */
  innerHTML?: string;
};
```

範例：

```js title="docusaurus-plugin/src/index.js"
module.exports = function (context, options) {
  return {
    name: 'docusaurus-plugin',
    loadContent: async () => {
      return {remoteHeadTags: await fetchHeadTagsFromAPI()};
    },
    // highlight-start
    injectHtmlTags({content}) {
      return {
        headTags: [
          {
            tagName: 'link',
            attributes: {
              rel: 'preconnect',
              href: 'https://www.github.com',
            },
          },
          ...content.remoteHeadTags,
        ],
        preBodyTags: [
          {
            tagName: 'script',
            attributes: {
              charset: 'utf-8',
              src: '/noflash.js',
            },
          },
        ],
        postBodyTags: [`<div> This is post body </div>`],
      };
    },
    // highlight-end
  };
};
```

## `getClientModules()` {#getClientModules}

回傳要導入客戶端套件的[客戶端模組](../../advanced/client.mdx#client-modules)路徑陣列。

舉例來說，要讓你的主題從使用者傳入的 `options` 載入 `customCss` 或 `customJs` 檔案路徑：

```js title="my-theme/src/index.js"
const path = require('path');

module.exports = function (context, options) {
  const {customCss, customJs} = options || {};
  return {
    name: 'name-of-my-theme',
    // highlight-start
    getClientModules() {
      return [customCss, customJs];
    },
    // highlight-end
  };
};
```